fix 404 and blocked resources error

--- a/public/mortgage/Mortgage-Calculator.html
+++ b/public/mortgage/Mortgage-Calculator.html
@@ -4,6 +4,7 @@
 <title>Mortgage Calculator (Canadian)</title>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <link rel="shortcut icon" href="http://mortgageintelligence.ca/assets/calculators-mi/favicon.ico">
+<meta name="robots" content="noindex, nofollow"/>
 <meta name="viewport" content="height=device-height,width=device-width,initial-scale=1">
 <!--
   Financial Calculators, ©1998-2014 KJE Computer Solutions, LLC.
